# sof-6-plano

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  extensions.py  models.py  scheduler_worker.py
app/blueprints/admin/: __init__.py  routes.py
app/blueprints/ai/: __init__.py  routes.py
app/blueprints/api/: __init__.py  routes.py
app/blueprints/auth/: __init__.py  forms.py  routes.py
app/blueprints/expenses/: __init__.py  routes.py
app/blueprints/maps/: __init__.py  routes.py
app/blueprints/notifications/: __init__.py  routes.py
app/blueprints/packing/: __init__.py  routes.py
app/blueprints/planner/: __init__.py  routes.py
app/blueprints/setup/: __init__.py  forms.py  routes.py
app/blueprints/tickets/: __init__.py  routes.py
app/blueprints/trips/: __init__.py  forms.py  routes.py
app/blueprints/versioning/: __init__.py  routes.py
app/services/: ai_client.py  crypto_service.py  currency_service.py  maps_client.py  notification_service.py  ocr_service.py  pdf_export_service.py  versioning_service.py  weather_client.py
app/static/: manifest.json
app/static/css/: custom.css
app/static/js/: autosave.js  maps.js  planner.js  sw.js  undo.js
app/templates/: base.html
app/templates/components/: modal.html  nav.html
app/templates/errors/: 403.html  404.html  429.html  500.html
docker/: nginx.conf
scripts/: install.sh  seed_wien_example.py
tests/: conftest.py  test_auth.py  test_models.py  test_planner.py  test_setup.py  test_trips.py  test_versioning.py
(+21 files in other folders)
